@@ -26,6 +26,7 @@ endif::[]
 [float]
 ===== Features
 * Support for inheritance of public API annotations {pull}1805[#1805]
+* JDBC instrumentation sets context.db.instance {pull}1820[#1820]
 
 [float]
 ===== Bug fixes
